--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -21,7 +21,7 @@
         "#@markdown <left><img src='https://icons.iconarchive.com/icons/flat-icons.com/square/256/save-icon.png' height=\"50\" alt=\"netdata\"/></center>\n",
         "##user_token = \"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\" #@param {type:\"string\"}\n",
         "##user_header = f\"\\\"Authorization: Bearer {user_token}\\\"\"\n",
-        "url = \"https://huggingface.co/uwg/modelz2/resolve/main/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
+        "url = \"https://huggingface.co/uwg/modelz2/resolve/main/v1-5-fp16.ckptyuyu\" #@param {type:\"string\"}\n",
         "save_ckpt = \"/content/stable-diffusion-webui/models/Stable-diffusion/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
         "!wget --no-check-certificate $url -O $save_ckpt\n",
         "\n"
@@ -63,7 +63,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
