--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "Y9EBc437WDOs",
         "cellView": "form"
@@ -50,29 +50,19 @@
         "  %cd stable-diffusion-webui\n",
         "  !COMMANDLINE_ARGS=\"--exit\" REQS_FILE=\"requirements.txt\" python launch.py\n",
         "  %cd stable-diffusion-webui\n",
+        "  !wget https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/config.json\n",
+        "  !wget https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/user.css\n",
         "  !git pull\n",
         "\n",
         "clear_output()\n",
-        "print('\u001b[1;32mNext Run SDZ !')"
+        "print('\u001b[1;32mDone !')"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "9gbgx0UkuhIo",
-        "outputId": "7e403b89-4669-4ab7-aef4-d2ac32f425bd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "9gbgx0UkuhIo"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1;32mNext !\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
