--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -2,14 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "Y9EBc437WDOs",
         "cellView": "form"
       },
       "outputs": [],
       "source": [
-        "#@markdown <left><img src='https://icons.iconarchive.com/icons/flat-icons.com/square/256/cloud-icon.png' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/drive.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "%%capture\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
@@ -18,7 +18,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://icons.iconarchive.com/icons/flat-icons.com/square/256/save-icon.png' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "##user_token = \"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\" #@param {type:\"string\"}\n",
         "##user_header = f\"\\\"Authorization: Bearer {user_token}\\\"\"\n",
         "url = \"https://huggingface.co/uwg/modelz2/resolve/main/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
@@ -36,7 +36,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://icons.iconarchive.com/icons/flat-icons.com/square/256/pill-icon.png' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
         "from IPython.utils import capture\n",
         "from IPython.display import clear_output\n",
@@ -67,7 +67,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://icons.iconarchive.com/icons/flat-icons.com/square/512/tractor-icon.png' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
         "SDZ = \"/stable-diffusion-webui\"\n",
