--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -50,8 +50,8 @@
         "  %cd stable-diffusion-webui\n",
         "  !COMMANDLINE_ARGS=\"--exit\" REQS_FILE=\"requirements.txt\" python launch.py\n",
         "  %cd stable-diffusion-webui\n",
-        "  !wget https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/config.json\n",
-        "  !wget https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/user.css\n",
+        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
         "  !git pull\n",
         "\n",
         "clear_output()\n",
