--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -9,7 +9,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/drivez.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/drive.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "%%capture\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
@@ -18,7 +18,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/savez.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "##user_token = \"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\" #@param {type:\"string\"}\n",
         "##user_header = f\"\\\"Authorization: Bearer {user_token}\\\"\"\n",
         "url = \"https://huggingface.co/uwg/modelz2/resolve/main/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
@@ -36,7 +36,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/installz.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
         "from IPython.utils import capture\n",
         "from IPython.display import clear_output\n",
@@ -50,8 +50,8 @@
         "  %cd stable-diffusion-webui\n",
         "  !COMMANDLINE_ARGS=\"--exit\" REQS_FILE=\"requirements.txt\" python launch.py\n",
         "  %cd stable-diffusion-webui\n",
-        "#  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
-        "#  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
+        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
         "  !git pull\n",
         "\n",
         "clear_output()\n",
@@ -67,7 +67,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2z.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
         "SDZ = \"/stable-diffusion-webui\"\n",
