--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -19,19 +19,37 @@
       "cell_type": "code",
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
-        "##user_token = \"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\" #@param {type:\"string\"}\n",
-        "##user_header = f\"\\\"Authorization: Bearer {user_token}\\\"\"\n",
-        "url = \"https://huggingface.co/uwg/modelz2/resolve/main/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
-        "save_ckpt = \"/content/stable-diffusion-webui/models/Stable-diffusion/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
-        "!wget --no-check-certificate $url -O $save_ckpt\n",
-        "\n"
+        "import os\n",
+        "from IPython.display import clear_output\n",
+        "\n",
+        "url = \"https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
+        "\n",
+        "save_models_dir = \"/content/sample_data\"#@param {type:\"string\"}\n",
+        "os.chdir(save_models_dir)\n",
+        "\n",
+        "!wget --no-check-certificate $url $save_models_dir\n",
+        "\n",
+        "clear_output()\n",
+        "print('\u001b[1;32mModel Save ✓')"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "5hbzyH9QMgR7"
+        "id": "5hbzyH9QMgR7",
+        "outputId": "b12ed239-932e-4e8f-efb5-111b0dd59ca5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1;32mModel Save ✓\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -44,37 +62,77 @@
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
         "os.chdir(SDZ_install)\n",
         "\n",
+        "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
+        "\n",
+        "\n",
         "with capture.capture_output() as cap:\n",
         "  gitclo = \"git clone --depth 1\" \n",
         "  !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
         "  %cd stable-diffusion-webui\n",
         "  !COMMANDLINE_ARGS=\"--exit\" REQS_FILE=\"requirements.txt\" python launch.py\n",
         "  %cd stable-diffusion-webui\n",
+        "\n",
         "#  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "#  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
-        "  !git pull\n",
+        "!git pull\n",
+        "\n",
+        "\n",
+        "# Install Extensions\n",
+        "os.chdir(SDZ_webui_path)\n",
+        "\n",
+        "%cd extensions\n",
+        "!git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "\n",
+        "# Replace path deppmap fix\n",
+        "with open(SDZ_webui_path+'/'+'extensions/depthmap2mask/scripts/depth2image_depthmask.py', 'r') as file :\n",
+        "  filedata = file.read()\n",
+        "\n",
+        "filedata = filedata.replace('extensions/depthmap2mask/scripts/depthmap_for_depth2img.py', SDZ_webui_path+'/'+'extensions/depthmap2mask/scripts/depth2image_depthmask.py')\n",
+        "\n",
+        "with open(SDZ_webui_path+'/'+'extensions/depthmap2mask/scripts/depth2image_depthmask.py', 'w') as file:\n",
+        "  file.write(filedata)\n",
+        "\n",
+        "%cd ..\n",
+        "!mkdir repositories\n",
+        "%cd repositories\n",
+        "!mkdir midas\n",
+        "%cd midas\n",
+        "!git clone https://github.com/isl-org/MiDaS.git .\n",
         "\n",
         "clear_output()\n",
-        "print('\u001b[1;32mDone !')"
+        "print('\u001b[1;32mReady for SDZ ✓')"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "9gbgx0UkuhIo"
+        "id": "9gbgx0UkuhIo",
+        "outputId": "b989de1f-9c15-4159-9cc3-25bc3cb3538b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1;32mReady for SDZ ✓\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
-        "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
+        "#SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
         "SDZ = \"/stable-diffusion-webui\"\n",
         "os.chdir(SDZ_install+SDZ)\n",
-        "models_dir = \"/content/gdrive/Shareddrives/Data13/ModelzZz/modelz3\" #@param {type:\"string\"}\n",
-        "model = \"/content/gdrive/Shareddrives/Data13/ModelzZz/modelz3/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
-        "!COMMANDLINE_ARGS=\"--ckpt-dir=$models_dir --ckpt=$model --share --api --api --cors-allow-origins=https://www.painthua.com\" REQS_FILE=\"requirements.txt\" python launch.py\n"
+        "models_dir = \"/content/sample_data\" #@param {type:\"string\"}\n",
+        "model = \"/content/sample_data/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
+        "!COMMANDLINE_ARGS=\"--ckpt-dir=$models_dir --ckpt=$model --share --api --cors-allow-origins=https://www.painthua.com\" REQS_FILE=\"requirements.txt\" python launch.py\n"
       ],
       "metadata": {
         "cellView": "form",
