--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -22,12 +22,10 @@
         "import os\n",
         "from IPython.display import clear_output\n",
         "\n",
-        "url = \"https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
-        "\n",
         "save_models_dir = \"/content/sample_data\"#@param {type:\"string\"}\n",
         "os.chdir(save_models_dir)\n",
-        "\n",
-        "!wget --no-check-certificate $url $save_models_dir\n",
+        "url = \"https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
+        "!wget --no-check-certificate $url\n",
         "\n",
         "clear_output()\n",
         "print('\u001b[1;32mModel Save ✓')"
@@ -38,9 +36,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b12ed239-932e-4e8f-efb5-111b0dd59ca5"
+        "outputId": "01f257e2-bac1-45aa-94c1-56c920784840"
       },
-      "execution_count": 4,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,9 +108,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b989de1f-9c15-4159-9cc3-25bc3cb3538b"
+        "outputId": "483d42e4-654c-4355-ed72-9bb1ff5c07d0"
       },
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +131,7 @@
         "os.chdir(SDZ_install+SDZ)\n",
         "models_dir = \"/content/sample_data\" #@param {type:\"string\"}\n",
         "model = \"/content/sample_data/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
-        "!COMMANDLINE_ARGS=\"--ckpt-dir=$models_dir --xformers --theme=dark --ckpt=$model --share --api --cors-allow-origins=https://www.painthua.com\" REQS_FILE=\"requirements.txt\" python launch.py\n"
+        "!COMMANDLINE_ARGS=\"--ckpt-dir=$models_dir --xformers --theme=dark --ckpt=$model --share --api --cors-allow-origins=https://www.painthua.com\" REQS_FILE=\"requirements.txt\" python launch.py"
       ],
       "metadata": {
         "cellView": "form",
