--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -38,7 +38,7 @@
         },
         "outputId": "01f257e2-bac1-45aa-94c1-56c920784840"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
         },
         "outputId": "483d42e4-654c-4355-ed72-9bb1ff5c07d0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,8 +130,8 @@
         "SDZ = \"/stable-diffusion-webui\"\n",
         "os.chdir(SDZ_install+SDZ)\n",
         "models_dir = \"/content/sample_data\" #@param {type:\"string\"}\n",
-        "model = \"/content/sample_data/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
-        "!COMMANDLINE_ARGS=\"--ckpt-dir=$models_dir --xformers --theme=dark --ckpt=$model --share --api --cors-allow-origins=https://www.painthua.com\" REQS_FILE=\"requirements.txt\" python launch.py"
+        "model_init = \"/content/sample_data/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
+        "!COMMANDLINE_ARGS=\"--ckpt-dir=$models_dir --xformers --theme=dark --ckpt=$model_init --share --api --cors-allow-origins=https://www.painthua.com\" REQS_FILE=\"requirements.txt\" python launch.py"
       ],
       "metadata": {
         "cellView": "form",
