--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -62,7 +62,6 @@
         "\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "\n",
-        "\n",
         "with capture.capture_output() as cap:\n",
         "  gitclo = \"git clone --depth 1\" \n",
         "  !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
@@ -70,11 +69,10 @@
         "  !COMMANDLINE_ARGS=\"--exit\" REQS_FILE=\"requirements.txt\" python launch.py\n",
         "  %cd stable-diffusion-webui\n",
         "\n",
-        "#!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
         "\n",
         "!git pull\n",
-        "\n",
         "\n",
         "# Install Extensions\n",
         "os.chdir(SDZ_webui_path)\n",
@@ -83,7 +81,7 @@
         "!git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
         "!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "\n",
-        "# Replace path deppmap fix\n",
+        "# Replace path depthmap2mask fix\n",
         "with open(SDZ_webui_path+'/'+'extensions/depthmap2mask/scripts/depth2image_depthmask.py', 'r') as file :\n",
         "  filedata = file.read()\n",
         "\n",
