--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -68,6 +68,7 @@
         "  %cd stable-diffusion-webui\n",
         "  !COMMANDLINE_ARGS=\"--exit\" REQS_FILE=\"requirements.txt\" python launch.py\n",
         "  %cd stable-diffusion-webui\n",
+        "  %pip install -q -U --pre triton\n",
         "\n",
         "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
