--- a/SDZ2.ipynb
+++ b/SDZ2.ipynb
@@ -109,22 +109,30 @@
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.0.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
+        "import shutil\n",
         "from IPython.utils import capture\n",
         "\n",
-        "SDZ = \"/stable-diffusion-webui2\"\n",
-        "SDZ_install = \"/content\" #@param {type:\"string\"}\n",
+        "SDZ = \"stable-diffusion-webui2\"\n",
+        "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
+        "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui2')\n",
+        "gitclo = \"git clone --depth 1\" \n",
         "os.chdir(SDZ_install)\n",
+        "\n",
         "model_init = \"/content/drive/Shareddrives/Data13/ModelzZz/modelz_base/768-v-ema.ckpt\" #@param {type:\"string\"}\n",
         "models_dir = \"/content/drive/Shareddrives/Data13/ModelzZz/modelz_base/\" #@param {type:\"string\"}\n",
         "\n",
         "def zhidez():\n",
+        "  if os.path.exists(SDZ):\n",
+        "        shutil.rmtree(SDZ)\n",
+        "        os.makedirs('stable-diffusion-webui2')\n",
+        "        %cd stable-diffusion-webui2\n",
+        "  !$gitclo https://github.com/camenduru/stable-diffusion-webui .\n",
         "\n",
-        "  SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui2')\n",
+        "  if not os.path.exists(SDZ):\n",
+        "        os.makedirs('stable-diffusion-webui2')\n",
+        "        %cd stable-diffusion-webui2\n",
+        "  !$gitclo https://github.com/camenduru/stable-diffusion-webui .\n",
         "\n",
-        "  gitclo = \"git clone --depth 1\" \n",
-        "  !$gitclo https://github.com/camenduru/stable-diffusion-webui\n",
-        "  os.rename(\"stable-diffusion-webui\",\"stable-diffusion-webui2\")\n",
-        "  %cd stable-diffusion-webui2\n",
         "  !git pull\n",
         "\n",
         "  %pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+1515f77.d20221130-cp38-cp38-linux_x86_64.whl\n",
@@ -156,12 +164,12 @@
         "  %cd midas\n",
         "  !git clone https://github.com/isl-org/MiDaS.git .\n",
         "\n",
-        "  os.chdir(SDZ_install+SDZ)\n",
+        "  os.chdir(SDZ_install+\"/\"+SDZ)\n",
         "\n",
         "with capture.capture_output() as cap:\n",
         "  zhidez()\n",
         "\n",
-        "!python launch.py --share --api --force-enable-xformers--xformers --cors-allow-origins=https://www.painthua.com --theme=dark --ckpt-dir=$models_dir --ckpt=$model_init \n"
+        "!python launch.py --share --api --force-enable-xformers --cors-allow-origins=https://www.painthua.com --theme=dark --ckpt-dir=$models_dir --ckpt=$model_init \n"
       ],
       "metadata": {
         "cellView": "form",
