--- a/SDZ2.ipynb
+++ b/SDZ2.ipynb
@@ -44,45 +44,51 @@
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ1.5.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
+        "import shutil\n",
         "from IPython.utils import capture\n",
         "\n",
-        "SDZ = \"/stable-diffusion-webui\"\n",
-        "SDZ_install = \"/content\" #@param {type:\"string\"}\n",
+        "Model_Base_15 = False #@param {type:\"boolean\"}\n",
+        "\n",
+        "SDZ = \"stable-diffusion-webui\"\n",
+        "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
+        "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
+        "gitclo = \"git clone --depth 1\" \n",
         "os.chdir(SDZ_install)\n",
-        "model_init = \"/content/drive/Shareddrives/Data13/ModelzZz/modelz_base/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
+        "\n",
+        "model_init = \"\" #@param {type:\"string\"}\n",
         "models_dir = \"\" #@param {type:\"string\"}\n",
         "\n",
-        "def zhidez():\n",
         "\n",
-        "  SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
-        "\n",
-        "  gitclo = \"git clone --depth 1\" \n",
+        "with capture.capture_output() as cap:\n",
+        "  if os.path.exists(SDZ):\n",
+        "    shutil.rmtree(SDZ)\n",
         "  !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
-        "  %cd stable-diffusion-webui\n",
-        "  !git pull\n",
         "\n",
-        "  %pip install -q -U --pre triton\n",
+        "  if not os.path.exists(SDZ):\n",
+        "    !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "  %cd stable-diffusion-webui/models/Stable-diffusion\n",
+        "\n",
+        "  if Model_Base_15:\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-fp16.ckpt\n",
+        "\n",
+        "  %cd ..\n",
+        "  %cd ..\n",
+        "  %cd stable-diffusion-webui\n",
+        "\n",
+        "  %pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+1515f77.d20221130-cp38-cp38-linux_x86_64.whl\n",
         "\n",
         "  # Install style - config\n",
         "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
-        "\n",
+        "  \n",
         "  # Install Extensions\n",
         "  os.chdir(SDZ_webui_path)\n",
-        "\n",
         "  %cd extensions\n",
         "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "  !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        " #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "\n",
-        "  # Replace path depthmap2mask fix\n",
-        "  with open(SDZ_webui_path+'/'+'extensions/depthmap2mask/scripts/depth2image_depthmask.py', 'r') as file :\n",
-        "    filedata = file.read()\n",
-        "\n",
-        "  filedata = filedata.replace('extensions/depthmap2mask/scripts/depthmap_for_depth2img.py', SDZ_webui_path+'/'+'extensions/depthmap2mask/scripts/depth2image_depthmask.py')\n",
-        "\n",
-        "  with open(SDZ_webui_path+'/'+'extensions/depthmap2mask/scripts/depth2image_depthmask.py', 'w') as file:\n",
-        "    file.write(filedata)\n",
-        "\n",
+        "  %cd ..\n",
         "  %cd ..\n",
         "  !mkdir repositories\n",
         "  %cd repositories\n",
@@ -90,12 +96,9 @@
         "  %cd midas\n",
         "  !git clone https://github.com/isl-org/MiDaS.git .\n",
         "\n",
-        "  os.chdir(SDZ_install+SDZ)\n",
+        "  os.chdir(SDZ_install+\"/\"+SDZ)\n",
         "\n",
-        "with capture.capture_output() as cap:\n",
-        "  zhidez()\n",
-        "\n",
-        "!python launch.py --share --api --xformers --cors-allow-origins=https://www.painthua.com --theme=dark --ckpt-dir=$models_dir --ckpt=$model_init \n"
+        "!python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark \n"
       ],
       "metadata": {
         "cellView": "form",
@@ -112,18 +115,16 @@
         "import shutil\n",
         "from IPython.utils import capture\n",
         "\n",
-        "Model_Base_20 = True #@param {type:\"boolean\"}\n",
+        "Model_Base_20 = False #@param {type:\"boolean\"}\n",
         "\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "gitclo = \"git clone --depth 1\" \n",
         "os.chdir(SDZ_install)\n",
-        "#v2inference_file = \"768-v-ema.yaml\"\n",
         "\n",
         "model_init = \"\" #@param {type:\"string\"}\n",
         "models_dir = \"\" #@param {type:\"string\"}\n",
-        "v2modelbase = \"768-v-ema.ckpt\"\n",
         "\n",
         "with capture.capture_output() as cap:\n",
         "  if os.path.exists(SDZ):\n",
