--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -2,21 +2,6 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Y9EBc437WDOs",
-        "cellView": "form"
-      },
-      "outputs": [],
-      "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/drive.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
-        "%%capture\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
@@ -32,109 +17,160 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "5hbzyH9QMgR7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "01f257e2-bac1-45aa-94c1-56c920784840"
+        "id": "5hbzyH9QMgR7"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1;32mModel Save ✓\n"
-          ]
-        }
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Y9EBc437WDOs",
+        "cellView": "form"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/drive.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "from IPython.display import clear_output\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "clear_output()\n",
+        "print('\u001b[1;32mDrive Conected ✓')"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ1.5.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
+        "import shutil\n",
         "from IPython.utils import capture\n",
-        "from IPython.display import clear_output\n",
         "\n",
+        "Model_Base_15 = False #@param {type:\"boolean\"}\n",
+        "\n",
+        "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
+        "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
+        "gitclo = \"git clone --depth 1\" \n",
         "os.chdir(SDZ_install)\n",
         "\n",
-        "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
+        "model_init = \"\" #@param {type:\"string\"}\n",
+        "models_dir = \"\" #@param {type:\"string\"}\n",
+        "\n",
         "\n",
         "with capture.capture_output() as cap:\n",
-        "  gitclo = \"git clone --depth 1\" \n",
+        "  if os.path.exists(SDZ):\n",
+        "    shutil.rmtree(SDZ)\n",
         "  !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "  if not os.path.exists(SDZ):\n",
+        "    !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "  %cd stable-diffusion-webui/models/Stable-diffusion\n",
+        "\n",
+        "  if Model_Base_15:\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-fp16.ckpt\n",
+        "\n",
+        "  %cd ..\n",
+        "  %cd ..\n",
         "  %cd stable-diffusion-webui\n",
-        "  !COMMANDLINE_ARGS=\"--exit\" REQS_FILE=\"requirements.txt\" python launch.py\n",
-        "  %cd stable-diffusion-webui\n",
-        "  %pip install -q -U --pre triton\n",
         "\n",
-        "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
-        "!wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
+        "  %pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+1515f77.d20221130-cp38-cp38-linux_x86_64.whl\n",
         "\n",
-        "!git pull\n",
+        "  # Install style - config\n",
+        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
+        "  \n",
+        "  # Install Extensions\n",
+        "  os.chdir(SDZ_webui_path)\n",
+        "  %cd extensions\n",
+        "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        " #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
         "\n",
-        "# Install Extensions\n",
-        "os.chdir(SDZ_webui_path)\n",
+        "  %cd ..\n",
+        "  %cd ..\n",
+        "  !mkdir repositories\n",
+        "  %cd repositories\n",
+        "  !mkdir midas\n",
+        "  %cd midas\n",
+        "  !git clone https://github.com/isl-org/MiDaS.git .\n",
         "\n",
-        "%cd extensions\n",
-        "!git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
-        "!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "  os.chdir(SDZ_install+\"/\"+SDZ)\n",
         "\n",
-        "# Replace path depthmap2mask fix\n",
-        "with open(SDZ_webui_path+'/'+'extensions/depthmap2mask/scripts/depth2image_depthmask.py', 'r') as file :\n",
-        "  filedata = file.read()\n",
-        "\n",
-        "filedata = filedata.replace('extensions/depthmap2mask/scripts/depthmap_for_depth2img.py', SDZ_webui_path+'/'+'extensions/depthmap2mask/scripts/depth2image_depthmask.py')\n",
-        "\n",
-        "with open(SDZ_webui_path+'/'+'extensions/depthmap2mask/scripts/depth2image_depthmask.py', 'w') as file:\n",
-        "  file.write(filedata)\n",
-        "\n",
-        "%cd ..\n",
-        "!mkdir repositories\n",
-        "%cd repositories\n",
-        "!mkdir midas\n",
-        "%cd midas\n",
-        "!git clone https://github.com/isl-org/MiDaS.git .\n",
-        "\n",
-        "clear_output()\n",
-        "print('\u001b[1;32mReady for SDZ ✓')"
+        "!python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark \n"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "9gbgx0UkuhIo",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "483d42e4-654c-4355-ed72-9bb1ff5c07d0"
+        "id": "Uo8Rjru04K6a"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1;32mReady for SDZ ✓\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.0.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
         "import os\n",
-        "#SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
-        "SDZ = \"/stable-diffusion-webui\"\n",
-        "os.chdir(SDZ_install+SDZ)\n",
-        "models_dir = \"/content/sample_data\" #@param {type:\"string\"}\n",
-        "model_init = \"/content/sample_data/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
-        "!COMMANDLINE_ARGS=\"--ckpt-dir=$models_dir --xformers --theme=dark --ckpt=$model_init --share --api --cors-allow-origins=https://www.painthua.com\" REQS_FILE=\"requirements.txt\" python launch.py"
+        "import shutil\n",
+        "from IPython.utils import capture\n",
+        "\n",
+        "Model_Base_20 = False #@param {type:\"boolean\"}\n",
+        "\n",
+        "SDZ = \"stable-diffusion-webui\"\n",
+        "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
+        "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
+        "gitclo = \"git clone --depth 1\" \n",
+        "os.chdir(SDZ_install)\n",
+        "\n",
+        "model_init = \"\" #@param {type:\"string\"}\n",
+        "models_dir = \"\" #@param {type:\"string\"}\n",
+        "\n",
+        "with capture.capture_output() as cap:\n",
+        "  if os.path.exists(SDZ):\n",
+        "    shutil.rmtree(SDZ)\n",
+        "  !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "  if not os.path.exists(SDZ):\n",
+        "    !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "  %cd stable-diffusion-webui/models/Stable-diffusion\n",
+        "\n",
+        "  if Model_Base_20:\n",
+        "    !wget https://huggingface.co/stabilityai/stable-diffusion-2/resolve/main/768-v-ema.ckpt\n",
+        "\n",
+        "  %cd ..\n",
+        "  %cd ..\n",
+        "  %cd stable-diffusion-webui\n",
+        "\n",
+        "  %pip install -q https://github.com/camenduru/stable-diffusion-webui-colab/releases/download/0.0.15/xformers-0.0.15.dev0+1515f77.d20221130-cp38-cp38-linux_x86_64.whl\n",
+        "\n",
+        "  # Install style - config\n",
+        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "  !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
+        "  !wget https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "  \n",
+        "  # Install Extensions\n",
+        "  os.chdir(SDZ_webui_path)\n",
+        "  %cd extensions\n",
+        "  !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        " #!git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "\n",
+        "  %cd ..\n",
+        "  %cd ..\n",
+        "  !mkdir repositories\n",
+        "  %cd repositories\n",
+        "  !mkdir midas\n",
+        "  %cd midas\n",
+        "  !git clone https://github.com/isl-org/MiDaS.git .\n",
+        "\n",
+        "  os.chdir(SDZ_install+\"/\"+SDZ)\n",
+        "\n",
+        "!python launch.py --share --api --config=v2-inference-v.yaml  --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark \n"
       ],
       "metadata": {
         "cellView": "form",
-        "id": "c8BQOGDoY9zd"
+        "id": "8T3cOCDr4HWl"
       },
       "execution_count": null,
       "outputs": []
