--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -1,6 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "[![Buy Me a cofee](https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/coffe4.gif?raw=true ) ](https://www.buymeacoffee.com/wilzamguerrero)"
+      ],
+      "metadata": {
+        "id": "gAenW8aqiQA7"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
@@ -179,7 +188,8 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
