--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -18,7 +18,7 @@
         "\n",
         "save_models_dir = \"/content/sample_data\"#@param {type:\"string\"}\n",
         "os.chdir(save_models_dir)\n",
-        "url = \"https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
+        "url = \"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" #@param {type:\"string\"}\n",
         "!wget --no-check-certificate $url\n",
         "\n",
         "clear_output()\n",
@@ -79,7 +79,7 @@
         "  %cd stable-diffusion-webui/models/Stable-diffusion\n",
         "\n",
         "  if Model_Base_15:\n",
-        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-fp16.ckpt\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\n",
         "\n",
         "  %cd ..\n",
         "  %cd ..\n",
@@ -146,7 +146,7 @@
         "  %cd stable-diffusion-webui/models/Stable-diffusion\n",
         "\n",
         "  if Model_Base_20:\n",
-        "    !wget https://huggingface.co/stabilityai/stable-diffusion-2/resolve/main/768-v-ema.ckpt\n",
+        "    !wget https://huggingface.co/stabilityai/stable-diffusion-2/resolve/main/Zv2-1_768-fp16\n",
         "\n",
         "  %cd ..\n",
         "  %cd ..\n",
