--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -146,7 +146,7 @@
         "  %cd stable-diffusion-webui/models/Stable-diffusion\n",
         "\n",
         "  if Model_Base_21:\n",
-        "    !wget https://huggingface.co/stabilityai/stable-diffusion-2/resolve/main/Zv2-1_768-fp16\n",
+        "    !wget https://huggingface.co/stabilityai/stable-diffusion-2/resolve/main/Zv2-1_768-fp16.ckpt\n",
         "\n",
         "  %cd ..\n",
         "  %cd ..\n",
