--- a/SDZ_custom/icon/DEVS.ipynb
+++ b/SDZ_custom/icon/DEVS.ipynb
@@ -138,7 +138,7 @@
         "  clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
-        "!python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae\n"
+        "!python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae --ckptfix\n"
       ]
     },
     {
@@ -212,11 +212,97 @@
         "  clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
-        "!python launch.py --share --api --config=v2-inference-v.yaml --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae"
+        "!python launch.py --share --api --config=v2-inference-v.yaml --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae --ckptfix"
       ],
       "metadata": {
         "cellView": "form",
         "id": "6qdOrNZjJkyD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZ2.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "import os\n",
+        "import shutil\n",
+        "from IPython.utils import capture\n",
+        "from IPython.display import clear_output\n",
+        "\n",
+        "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
+        "Model_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1-768\"]\n",
+        "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V2.1-768\"]\n",
+        "SDZ = \"stable-diffusion-webui\"\n",
+        "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
+        "gitclo = \"git clone --depth 1\" \n",
+        "os.chdir(SDZ_install)\n",
+        "\n",
+        "model_init = \"\" #@param {type:\"string\"}\n",
+        "models_dir = \"\" #@param {type:\"string\"}\n",
+        "\n",
+        "with capture.capture_output() as cap:\n",
+        "\n",
+        "  if os.path.exists(SDZ):\n",
+        "    shutil.rmtree(SDZ)\n",
+        "  !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "  if not os.path.exists(SDZ):\n",
+        "    !$gitclo https://github.com/AUTOMATIC1111/stable-diffusion-webui\n",
+        "\n",
+        "  %cd stable-diffusion-webui/models/Stable-diffusion\n",
+        "\n",
+        "  if Download_Base_Model == \"V1.5\":\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\n",
+        "\n",
+        "  elif Download_Base_Model == \"V2.1-768\":\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/blob/main/Zv2-1_768-fp16.ckpt\n",
+        "\n",
+        "  else:\n",
+        "    %cd ..\n",
+        "    %cd ..\n",
+        "    %cd stable-diffusion-webui\n",
+        "\n",
+        "  clear_output()\n",
+        "print('\u001b[1;90mInstalling SDZ Xformers ✓')\n",
+        "\n",
+        "with capture.capture_output() as cap:\n",
+        "  if not os.path.exists('/usr/local/conda-meta/'):\n",
+        "    !wget https://github.com/korakot/kora/releases/download/v0.10/py310.sh\n",
+        "    !bash ./py310.sh -b -f -p /usr/local\n",
+        "    !python -m ipykernel install --name \"py310\" --user\n",
+        "    !conda install -c \"xformers/label/dev\" xformers -y\n",
+        "\n",
+        "  clear_output()\n",
+        "print('\u001b[1;96mInstalling SDZ with Extentions ✓')\n",
+        "\n",
+        "with capture.capture_output() as cap:\n",
+        "  if os.path.exists('/usr/local/conda-meta/'):\n",
+        "\n",
+        "    # Install style - config\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
+        "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
+        "    \n",
+        "    # Install Extensions\n",
+        "    os.chdir(SDZ_webui_path)\n",
+        "    %cd extensions\n",
+        "    !git clone https://github.com/Extraltodeus/depthmap2mask.git\n",
+        "    !git clone https://github.com/d8ahazard/sd_dreambooth_extension.git\n",
+        "\n",
+        "    os.chdir(SDZ_install+\"/\"+SDZ)\n",
+        "\n",
+        "  clear_output()\n",
+        "print('\u001b[1;90mPreparing SDZ System ✓')\n",
+        "\n",
+        "if Model_Version == \"V1.5\":\n",
+        "  !python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae --ckptfix\n",
+        "elif Model_Version == \"V2.1-768\":\n",
+        "  !python launch.py --share --api --config=v2-inference-v.yaml --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae --ckptfix\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "IG7HuduAVoei"
       },
       "execution_count": null,
       "outputs": []
