--- a/SDZ_custom/icon/DEVS.ipynb
+++ b/SDZ_custom/icon/DEVS.ipynb
@@ -229,10 +229,12 @@
         "import shutil\n",
         "from IPython.utils import capture\n",
         "from IPython.display import clear_output\n",
+        "import sys\n",
+        "import fileinput\n",
         "\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
-        "Model_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1-768\"]\n",
-        "Download_Base_Model = \"\" #@param [\"\", \"V1.5\", \"V2.1-768\"]\n",
+        "Model_Version = \"V2.1-768\" #@param [\"V1.5\", \"V2.1-768\"]\n",
+        "Download_Base_Model = \"V2.1-768\" #@param [\"\", \"V1.5\", \"V2.1-768\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "gitclo = \"git clone --depth 1\" \n",
@@ -259,6 +261,7 @@
         "    !wget https://huggingface.co/uwg/modelz_base/blob/main/Zv2-1_768-fp16.ckpt\n",
         "\n",
         "  else:\n",
+        "    Download_Base_Model == \"\"\n",
         "    %cd ..\n",
         "    %cd ..\n",
         "    %cd stable-diffusion-webui\n",
@@ -283,7 +286,8 @@
         "    os.chdir(SDZ_webui_path)\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/config.json\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/user.css\n",
-        "    \n",
+        "    !wget https://raw.githubusercontent.com/Stability-AI/stablediffusion/main/configs/stable-diffusion/v2-inference-v.yaml\n",
+        "\n",
         "    # Install Extensions\n",
         "    os.chdir(SDZ_webui_path)\n",
         "    %cd extensions\n",
@@ -301,11 +305,45 @@
         "  !python launch.py --share --api --config=v2-inference-v.yaml --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae --ckptfix\n"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "cellView": "form",
-        "id": "IG7HuduAVoei"
+        "id": "IG7HuduAVoei",
+        "outputId": "b528f692-75ef-4631-c4cd-ef1410e05223"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1;90mInstalling SDZ Xformers ✓\n",
+            "\u001b[1;96mInstalling SDZ with Extentions ✓\n",
+            "\u001b[1;90mPreparing SDZ System ✓\n",
+            "Python 3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]\n",
+            "Commit hash: 685f9631b56ff8bd43bce24ff5ce0f9a0e9af490\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/sample_data/stable-diffusion-webui/launch.py\", line 294, in <module>\n",
+            "    prepare_environment()\n",
+            "  File \"/content/sample_data/stable-diffusion-webui/launch.py\", line 209, in prepare_environment\n",
+            "    run_python(\"import torch; assert torch.cuda.is_available(), 'Torch is not able to use GPU; add --skip-torch-cuda-test to COMMANDLINE_ARGS variable to disable this check'\")\n",
+            "  File \"/content/sample_data/stable-diffusion-webui/launch.py\", line 73, in run_python\n",
+            "    return run(f'\"{python}\" -c \"{code}\"', desc, errdesc)\n",
+            "  File \"/content/sample_data/stable-diffusion-webui/launch.py\", line 49, in run\n",
+            "    raise RuntimeError(message)\n",
+            "RuntimeError: Error running command.\n",
+            "Command: \"/usr/local/bin/python\" -c \"import torch; assert torch.cuda.is_available(), 'Torch is not able to use GPU; add --skip-torch-cuda-test to COMMANDLINE_ARGS variable to disable this check'\"\n",
+            "Error code: 1\n",
+            "stdout: <empty>\n",
+            "stderr: Traceback (most recent call last):\n",
+            "  File \"<string>\", line 1, in <module>\n",
+            "AssertionError: Torch is not able to use GPU; add --skip-torch-cuda-test to COMMANDLINE_ARGS variable to disable this check\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
