--- a/SDZ_custom/icon/DEVS.ipynb
+++ b/SDZ_custom/icon/DEVS.ipynb
@@ -235,8 +235,8 @@
         "import fileinput\n",
         "\n",
         "SDZ_install = \"/content/sample_data\" #@param {type:\"string\"}\n",
-        "Model_Version = \"V2.1-768\" #@param [\"V1.5\", \"V2.1-768\"]\n",
-        "Download_Base_Model = \"V2.1-768\" #@param [\"\", \"V1.5\", \"V2.1-768\"]\n",
+        "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1-768\"]\n",
+        "Download_Base_Model = \"V1.5\" #@param [\"\", \"V1.5\", \"V2.1-768\"]\n",
         "SDZ = \"stable-diffusion-webui\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'stable-diffusion-webui')\n",
         "gitclo = \"git clone --depth 1\" \n",
@@ -264,9 +264,9 @@
         "\n",
         "  else:\n",
         "    Download_Base_Model == \"\"\n",
-        "    %cd ..\n",
-        "    %cd ..\n",
-        "    %cd stable-diffusion-webui\n",
+        "  %cd ..\n",
+        "  %cd ..\n",
+        "  %cd stable-diffusion-webui\n",
         "\n",
         "  clear_output()\n",
         "print('\u001b[1;90mInstalling SDZ Xformers ✓')\n",
@@ -301,10 +301,10 @@
         "  clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "\n",
-        "if Model_Version == \"V1.5\":\n",
-        "  !python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae --ckptfix\n",
-        "elif Model_Version == \"V2.1-768\":\n",
-        "  !python launch.py --share --api --config=v2-inference-v.yaml --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae --ckptfix\n"
+        "if SDZ_Version == \"V1.5\":\n",
+        "  !python launch.py --share --api --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --no-half\n",
+        "elif SDZ_Version == \"V2.1-768\":\n",
+        "  !python launch.py --share --api --config=v2-inference-v.yaml --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --no-half\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -316,7 +316,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!python launch.py --share --api --config=v2-inference-v.yaml --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --disable-safe-unpickle --no-half-vae --ckptfix --skip-torch-cuda-test"
+        "!python launch.py --share --api --config=v2-inference-v.yaml --force-enable-xformers --ckpt-dir=$models_dir --ckpt=$model_init --cors-allow-origins=https://www.painthua.com --theme=dark --no-half"
       ],
       "metadata": {
         "id": "J0o6_YkInFCP"
